--- a/Example/AMNF.Example.asmdef
+++ b/Example/AMNF.Example.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "AMNF.Example",
-    "rootNamespace": "",
+    "rootNamespace": "AbyssMoth",
     "references": [
         "GUID:adbda3056052341eba6768c10b1769d6",
         "GUID:776d03a35f1b52c4a9aed9f56d7b4229"
