Ignore empty resources folder .meta

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ Resources/AbyssMothNodeFramework/ConnectorDebugConfig.asset
 Resources/AbyssMothNodeFramework/ConnectorDebugConfig.asset.meta
 Resources/AbyssMothNodeFramework/ProjectRootConnector.prefab
 Resources/AbyssMothNodeFramework/ProjectRootConnector.prefab.meta
+Resources.meta
