feat!: release v3.0.0 core architecture refresh
- replace ServiceRegistry with ServiceContainer and add tagged service API

- migrate SceneEntityIndex to LocalConnector-first indexing with runtime-safe tag refresh

- remove EntityKeyBehaviour and legacy debug config tooling

- add FrameworkConfig + FrameworkLogger and improve SceneConnector spawn/collection flow

- add EditMode/PlayMode tests, examples, and Russian docs

- isolate benchmark assembly to Editor and move benchmark logs to docs

--- a/Benchmark/AMNF.Benchmark.asmdef
+++ b/Benchmark/AMNF.Benchmark.asmdef
@@ -5,7 +5,9 @@
         "GUID:adbda3056052341eba6768c10b1769d6",
         "GUID:776d03a35f1b52c4a9aed9f56d7b4229"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
